syntax = "proto2";
package raft;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message State {
	required int64 term   = 1 [(gogoproto.nullable) = false];
	required int64 vote   = 2 [(gogoproto.nullable) = false];
	required int64 commit = 3 [(gogoproto.nullable) = false];
	required int64 lastIndex = 4 [(gogoproto.nullable) = false];
}
